[gd_scene load_steps=5 format=3 uid="uid://b37qsvrdy58fk"]

[ext_resource type="Script" path="res://FinishedLevelMenu.gd" id="1_6r1d4"]
[ext_resource type="Texture2D" uid="uid://cfy5mqjkum2s8" path="res://kenney_assets/pause_background.png" id="2_bp2ke"]

[sub_resource type="LabelSettings" id="LabelSettings_jiem2"]
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oekf2"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="FinishedLevelMenu" type="Control"]
process_mode = 3
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6r1d4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_bp2ke")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 36.0
offset_right = 576.0
offset_bottom = 105.0
text = "        Finished Level!"
label_settings = SubResource("LabelSettings_jiem2")

[node name="BestTime" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 108.0
offset_right = 576.0
offset_bottom = 131.0
text = "Best Time: 00:00:000"
label_settings = SubResource("LabelSettings_oekf2")
horizontal_alignment = 1

[node name="NextLevel" type="Button" parent="."]
layout_mode = 0
offset_left = 198.0
offset_top = 144.0
offset_right = 378.0
offset_bottom = 175.0
text = "Next Level"

[node name="RetryLevel" type="Button" parent="."]
layout_mode = 0
offset_left = 198.0
offset_top = 189.0
offset_right = 378.0
offset_bottom = 220.0
text = "Retry Level"

[node name="QuitToMainMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 198.0
offset_top = 234.0
offset_right = 378.0
offset_bottom = 265.0
text = "Quit to Main Menu"

[connection signal="pressed" from="NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="RetryLevel" to="." method="_on_retry_level_pressed"]
[connection signal="pressed" from="QuitToMainMenu" to="." method="_on_quit_to_main_menu_pressed"]
